--- a/ABIMSIM/IAPView.xib
+++ b/ABIMSIM/IAPView.xib
@@ -7,80 +7,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="IAPView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="IAP View" customClass="IAPView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background_IAP" translatesAutoresizingMaskIntoConstraints="NO" id="gar-HA-2Pr">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                </imageView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="h3o-fu-dHi">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="iN0-l3-epB" id="iJI-8z-Wjp"/>
+                        <outlet property="delegate" destination="iN0-l3-epB" id="DMq-Ph-GRh"/>
+                    </connections>
+                </tableView>
                 <view alpha="0.64999997615814209" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="twO-dF-xpz">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
                     <color key="backgroundColor" red="0.066666666669999999" green="0.031372549020000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dPs-es-h8K">
-                    <rect key="frame" x="15" y="16" width="40" height="40"/>
-                    <state key="normal" image="UpgradesChevron">
+                    <rect key="frame" x="265" y="16" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="029-2h-Kyt"/>
+                        <constraint firstAttribute="width" constant="40" id="kOI-zJ-tXG"/>
+                    </constraints>
+                    <state key="normal" image="CloseX_0">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <state key="selected" image="CloseX_1"/>
+                    <state key="highlighted" image="CloseX_1"/>
                     <connections>
                         <action selector="backButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="m7D-ap-Cvu"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UpgradesHeaderTitle" translatesAutoresizingMaskIntoConstraints="NO" id="4h4-fE-Qxg">
-                    <rect key="frame" x="109" y="22" width="102" height="27"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GetMoreXPTitle" translatesAutoresizingMaskIntoConstraints="NO" id="4h4-fE-Qxg">
+                    <rect key="frame" x="15" y="22" width="127" height="27"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A6W-wJ-O9P">
-                    <rect key="frame" x="125" y="156" width="71" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="DmQ-bT-fBK"/>
-                    </constraints>
-                    <state key="normal" title="750 XP">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="xp750Tapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="5kN-OA-GJ8"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZeW-qe-om0">
-                    <rect key="frame" x="125" y="194" width="71" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="R0N-Tg-QwL"/>
-                    </constraints>
-                    <state key="normal" title="1,500 XP">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="xp1500Tapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="AcE-KU-Hbz"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8wE-xM-5C7">
-                    <rect key="frame" x="125" y="232" width="71" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="lmP-iE-dfV"/>
-                    </constraints>
-                    <state key="normal" title="4,000 XP">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="xp4000Tapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="UsP-32-oBC"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hSO-OP-DVK">
-                    <rect key="frame" x="125" y="269" width="71" height="30"/>
-                    <state key="normal" title="10,000 XP">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="xp10000Tapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="jSs-aS-MpE"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gc-ve-rrJ">
-                    <rect key="frame" x="125" y="307" width="71" height="30"/>
-                    <state key="normal" title="25,000 XP">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="xp25000Tapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="1zP-iw-V2w"/>
-                    </connections>
-                </button>
                 <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8uZ-m4-8Au">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
@@ -94,42 +58,30 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="dPs-es-h8K" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="6dr-JO-zYq"/>
-                <constraint firstItem="4h4-fE-Qxg" firstAttribute="centerX" secondItem="A6W-wJ-O9P" secondAttribute="centerX" id="8LM-Ux-KTj"/>
-                <constraint firstItem="hSO-OP-DVK" firstAttribute="top" secondItem="8wE-xM-5C7" secondAttribute="bottom" constant="7" id="9bp-rB-Rh1"/>
+                <constraint firstItem="4h4-fE-Qxg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="DI6-fn-O0V"/>
                 <constraint firstAttribute="trailing" secondItem="8uZ-m4-8Au" secondAttribute="trailing" id="E8w-sq-pbC"/>
                 <constraint firstAttribute="bottom" secondItem="8uZ-m4-8Au" secondAttribute="bottom" id="GSY-h2-h1L"/>
-                <constraint firstItem="4h4-fE-Qxg" firstAttribute="leading" secondItem="dPs-es-h8K" secondAttribute="trailing" constant="54" id="HFM-3j-I0D"/>
                 <constraint firstItem="8uZ-m4-8Au" firstAttribute="leading" secondItem="twO-dF-xpz" secondAttribute="leading" id="HOq-wp-95P"/>
-                <constraint firstItem="A6W-wJ-O9P" firstAttribute="top" secondItem="twO-dF-xpz" secondAttribute="bottom" constant="84" id="KnF-xc-WZe"/>
+                <constraint firstAttribute="trailing" secondItem="dPs-es-h8K" secondAttribute="trailing" constant="15" id="IZJ-Of-bLF"/>
                 <constraint firstItem="8uZ-m4-8Au" firstAttribute="top" secondItem="twO-dF-xpz" secondAttribute="top" id="MVU-CG-5IM"/>
                 <constraint firstItem="8uZ-m4-8Au" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="OXk-Jv-I8h"/>
-                <constraint firstItem="dPs-es-h8K" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="SbZ-VR-lo4"/>
-                <constraint firstItem="9gc-ve-rrJ" firstAttribute="top" secondItem="hSO-OP-DVK" secondAttribute="bottom" constant="8" symbolic="YES" id="USk-qP-hXz"/>
                 <constraint firstItem="8uZ-m4-8Au" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="VwB-cY-lJx"/>
                 <constraint firstItem="dPs-es-h8K" firstAttribute="centerY" secondItem="twO-dF-xpz" secondAttribute="centerY" id="aJ5-tf-O7c"/>
-                <constraint firstItem="hSO-OP-DVK" firstAttribute="trailing" secondItem="8wE-xM-5C7" secondAttribute="trailing" id="ac2-2w-u5C"/>
                 <constraint firstItem="4h4-fE-Qxg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="22" id="bV6-YQ-93b"/>
-                <constraint firstItem="ZeW-qe-om0" firstAttribute="trailing" secondItem="8wE-xM-5C7" secondAttribute="trailing" id="d7f-AS-pyn"/>
-                <constraint firstItem="ZeW-qe-om0" firstAttribute="leading" secondItem="8wE-xM-5C7" secondAttribute="leading" id="f1L-E3-UWb"/>
-                <constraint firstItem="hSO-OP-DVK" firstAttribute="centerY" secondItem="8uZ-m4-8Au" secondAttribute="centerY" id="gmd-JY-Az1"/>
-                <constraint firstItem="twO-dF-xpz" firstAttribute="centerX" secondItem="4h4-fE-Qxg" secondAttribute="centerX" id="mTR-27-Uuf"/>
                 <constraint firstItem="8uZ-m4-8Au" firstAttribute="trailing" secondItem="twO-dF-xpz" secondAttribute="trailing" id="qgl-nH-ukF"/>
-                <constraint firstItem="ZeW-qe-om0" firstAttribute="leading" secondItem="A6W-wJ-O9P" secondAttribute="leading" id="rL7-aD-axJ"/>
-                <constraint firstItem="ZeW-qe-om0" firstAttribute="top" secondItem="A6W-wJ-O9P" secondAttribute="bottom" constant="8" symbolic="YES" id="roe-YO-faY"/>
-                <constraint firstItem="9gc-ve-rrJ" firstAttribute="leading" secondItem="hSO-OP-DVK" secondAttribute="leading" id="sdb-Do-baO"/>
-                <constraint firstItem="8wE-xM-5C7" firstAttribute="top" secondItem="ZeW-qe-om0" secondAttribute="bottom" constant="8" symbolic="YES" id="v27-AL-gHK"/>
-                <constraint firstItem="8wE-xM-5C7" firstAttribute="leading" secondItem="hSO-OP-DVK" secondAttribute="leading" id="wV8-f6-P2N"/>
-                <constraint firstItem="ZeW-qe-om0" firstAttribute="trailing" secondItem="A6W-wJ-O9P" secondAttribute="trailing" id="zyP-ag-Wzw"/>
             </constraints>
             <connections>
                 <outlet property="loaderView" destination="8uZ-m4-8Au" id="DuZ-rt-G9N"/>
+                <outlet property="tableView" destination="h3o-fu-dHi" id="S2T-qy-2h7"/>
             </connections>
             <point key="canvasLocation" x="325" y="232"/>
         </view>
     </objects>
     <resources>
-        <image name="UpgradesChevron" width="15" height="23"/>
-        <image name="UpgradesHeaderTitle" width="102" height="27"/>
+        <image name="Background_IAP" width="375" height="667"/>
+        <image name="CloseX_0" width="23" height="23"/>
+        <image name="CloseX_1" width="25" height="25"/>
+        <image name="GetMoreXPTitle" width="127" height="27"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
